Atualização dos metodos e variaveis
