# src/swagger/main.yaml
@@ -85,6 +85,22 @@ paths:
           $ref: '#/components/responses/Erro'
 
   /endereco/{id}:
+    get:
+      summary: Busca por filtro, um Endereço por ID
+      parameters:
+        - name: id
+          description: O ID numérico do Endereço
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          $ref: '#/components/responses/Sucesso'
+        "404":
+          $ref: '#/components/responses/Erro'
+
     put:
       summary: Atualiza o Endereco
       parameters:
@@ -104,6 +120,26 @@ paths:
         "201":
           $ref: '#/components/responses/Atualizado'
         "400":
+          $ref: '#/components/responses/Erro'
+
+  /endereco/cep/{cep}:
+    get:
+      summary: Busca por filtro, uma Pessoa por CEP
+      parameters:
+        - name: cep
+          description: CEP sem pontuação (8 dígitos)
+          in: path
+          required: true
+          schema:
+            type: string
+            pattern: '^[0-9]{8}$'
+            minLength: 8
+            maxLength: 8
+          example: "74000001"
+      responses:
+        "200":
+          $ref: '#/components/responses/Sucesso'
+        "404":
           $ref: '#/components/responses/Erro'
 
 components:
